--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -1,34 +1,25 @@
+
 <form method="POST" action="/figures">
+
 <h2> Create A New Figure </h2>
-  <p>Figure Name: <input type="text" name="figure[name]"/></p>
-  <!-- <p>Title Name: <input type="text" name="figure[title_ids][]"/></p> -->
-  <!-- <select name="Titles"> -->
-    <!-- <option value="title_id">placeholder for ruby </option>
-  </select>
-  <select name="Landmarks">
-    <option value="landmark_id" name="figure[landmark_ids][]">placeholder for ruby </option>
-  </select> -->
+  <p>Figure Name: <input type="text" name="figure[name]" id="figure_name"/></p>
 
 <h3><u> Titles</u></h3>
-<% Title.all.each do |title| %>
-  <input type="checkbox"/>
-  <label for="title_id"><%= title.name %></label>
-<br/>
-  <% end %>
-  <p>Missing Title? <input type="text" name="title[name]"></input></p>
+  <% Title.all.each do |title| %>
+    <input type="checkbox" name="figure[title_ids][]" id="title_<%= title.id %>" value="<%=title.id%>"/>
+    <label for="title_ids"><%= title.name %></label>
+  <br/>
+    <% end %>
+  <p>Missing Title? <input type="text" id="new_title" name="title[name]"></input></p>
 <br/>
 
 <h3><u> Landmarks</u> </h3>
-<% Landmark.all.each do |lm| %>
-  <input type="checkbox"/>
-  <label for="landmark_id"><%= lm.name %></label>
-<br/>
-  <% end %>
-  <p>Missing Landmark? <input type="text" name="landmark[name]"></input></p>
+  <% Landmark.all.each do |landmark| %>
+    <input type="checkbox" name="figure[landmark_ids][]" id="landmark_<%= landmark.id %>" value="<%=landmark.id%>"/>
+    <label for="landmark_ids"><%= landmark.name %></label>
+  <br/>
+    <% end %>
+  <p>Missing Landmark? <input type="text" id="new_landmark" name="landmark[name]"></input></p>
 
-
-
-
-
-  <p><input type="submit" value="submit" id="submit"/></p>
+  <p><input type="submit" value="submit" id="Create New Figure"/></p>
 </form>
