--- a/app/views/figures/show.erb
+++ b/app/views/figures/show.erb
@@ -1,10 +1,3 @@
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Year Completed</th>
-  </tr>
-  <tr>
-    <td><%= @landmark.name %></td>
-    <td><%= @landmark.year_completed %></td>
-  </tr>
-<table>
+
+<p><%=@fig.name%></p>
+<p><%=@fig.landmarks.last.name%></p>
