--- a/app/views/landmarks/show.erb
+++ b/app/views/landmarks/show.erb
@@ -1,10 +1,2 @@
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Year Completed</th>
-  </tr>
-  <tr>
-    <td><%= @landmark.name %></td>
-    <td><%= @landmark.year_completed %></td>
-  </tr>
-<table>
+<p><%=Landmark.all.find(params['id']).name%></p>
+<p><%=Landmark.all.find(params['id']).year_completed%></p>
